--- a/ATLProject1/ATLProject1.vcxproj
+++ b/ATLProject1/ATLProject1.vcxproj
@@ -176,7 +176,7 @@
       </DllDataFileName>
       <ValidateAllParameters>true</ValidateAllParameters>
       <MinimumTargetSystem>NT100</MinimumTargetSystem>
-      <TargetEnvironment>X64</TargetEnvironment>
+      <TargetEnvironment>ARM64</TargetEnvironment>
     </Midl>
     <ResourceCompile>
       <Culture>0x0409</Culture>
